samples/_failures_safe/1761332290_599ac5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8901db76.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_8901db76.c:167:13: error: expected expression at end of input
  167 |             if (right > 0 &&
      |             ^~
./samples/SAFE/__tmp_8901db76.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8901db76.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8901db76.c:167:13: error: expected declaration or statement at end of input
